remove overlay config

--- a/pom.xml
+++ b/pom.xml
@@ -326,19 +326,19 @@
             </exclusions>
         </dependency>
         <!-- This dependency is used for the "FHIR Tester" web app overlay -->
-        <dependency>
-            <groupId>ca.uhn.hapi.fhir</groupId>
-            <artifactId>hapi-fhir-testpage-overlay</artifactId>
-            <version>${project.parent.version}</version>
-            <type>war</type>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>ca.uhn.hapi.fhir</groupId>
-            <artifactId>hapi-fhir-testpage-overlay</artifactId>
-            <version>${project.parent.version}</version>
-            <classifier>classes</classifier>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>ca.uhn.hapi.fhir</groupId>-->
+        <!--            <artifactId>hapi-fhir-testpage-overlay</artifactId>-->
+        <!--            <version>${project.parent.version}</version>-->
+        <!--            <type>war</type>-->
+        <!--            <scope>provided</scope>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>ca.uhn.hapi.fhir</groupId>-->
+        <!--            <artifactId>hapi-fhir-testpage-overlay</artifactId>-->
+        <!--            <version>${project.parent.version}</version>-->
+        <!--            <classifier>classes</classifier>-->
+        <!--        </dependency>-->
         <!-- This dependency is used to include the IPS Base Implementation -->
         <dependency>
             <groupId>ca.uhn.hapi.fhir</groupId>
@@ -348,7 +348,7 @@
 
         <!-- HAPI-FHIR uses Logback for logging support. The logback library is included automatically by Maven as a part of the hapi-fhir-base dependency, but you also need to include a logging library. Logback
             is used here, but log4j would also be fine. -->
-<!--        <dependency>-->
+        <!--        <dependency>-->
 <!--            <groupId>ch.qos.logback</groupId>-->
 <!--            <artifactId>logback-classic</artifactId>-->
 <!--        </dependency>-->
@@ -663,25 +663,25 @@
             </plugin>
 
             <!-- The configuration here tells the WAR plugin to include the FHIR Tester overlay. You can omit it if you are not using that feature. -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifestEntries>
-                            <Build-Time>${maven.build.timestamp}</Build-Time>
-                        </manifestEntries>
-                    </archive>
-                    <attachClasses>true</attachClasses>
-                    <overlays>
-                        <overlay>
-                            <groupId>ca.uhn.hapi.fhir</groupId>
-                            <artifactId>hapi-fhir-testpage-overlay</artifactId>
-                        </overlay>
-                    </overlays>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
-            </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-war-plugin</artifactId>-->
+            <!--                <configuration>-->
+            <!--                    <archive>-->
+            <!--                        <manifestEntries>-->
+            <!--                            <Build-Time>${maven.build.timestamp}</Build-Time>-->
+            <!--                        </manifestEntries>-->
+            <!--                    </archive>-->
+            <!--                    <attachClasses>true</attachClasses>-->
+            <!--                    <overlays>-->
+            <!--                        <overlay>-->
+            <!--                            <groupId>ca.uhn.hapi.fhir</groupId>-->
+            <!--                            <artifactId>hapi-fhir-testpage-overlay</artifactId>-->
+            <!--                        </overlay>-->
+            <!--                    </overlays>-->
+            <!--                    <failOnMissingWebXml>false</failOnMissingWebXml>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
 
             <!-- This is to run the integration tests -->
             <plugin>
