Configuration through Environment Variables progress

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,8 +35,8 @@ services:
     volumes:
       - ./database/create-mysql-database.sql:/docker-entrypoint-initdb.d/1.sql
   iis-sandbox:
-#    build: .
-    image: clemhen/iis-sandbox:deployable-v1.2
+    build: .
+    #    image: clemhen/iis-sandbox:deployable-v1.2
     container_name: iis-sandbox
     #    environment:
     #      - iis.mysql.hibernate.connection.url=jdbc:mysql://iis-sandbox-mysql:3306/iis_alongside_jpa
