--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,7 @@
 #see https://docs.spring.io/spring-boot/docs/current/reference/html/actuator.html#actuator.endpoints
 
 #Used for all profiles
+#Profiles for R5, R4, dev at the bottom
 
 management:
   endpoints:
@@ -39,6 +40,7 @@ spring:
     check-location: false
     baselineOnMigrate: true
   datasource:
+    url: '@SPRING_DATASOURCE_URL@'
     # rest is Handled in spring profiles
     max-active: 50
     # database connection pool size
@@ -222,34 +224,30 @@ hapi:
 spring:
   config.activate.on-profile: prod
   datasource:
-    url: '@SPRING_DATASOURCE_URL@'
-#    url: '${spring.datasource.url}'
-#    url: ${spring.datasource.url}
     username: hapi_iis_web
     password: SicMundusCreatusEst
     driver-class-name: org.postgresql.Driver
+  jpa.properties.hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect
 #  set in pom.xml TODO see why it sometimes does not work
 
 ## Dev profile only properties to set up with H2
 ---
 spring:
-  config.activate.on-profile: dev-r5
+  config.activate.on-profile: dev
   datasource:
-    url: 'jdbc:h2:file:./data-h2/r5'
     username: sa
     password: null
     driverClassName: org.h2.Driver
+  jpa.properties.hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect
+---
+spring:
+  config.activate.on-profile: R5
 hapi:
   fhir:
     fhir_version: R5
 ---
 spring:
-  config.activate.on-profile: dev-r4
-  datasource:
-    url: 'jdbc:h2:file:./data-h2/r4'
-    username: sa
-    password: null
-    driverClassName: org.h2.Driver
+  config.activate.on-profile: R4
 hapi:
   fhir:
     fhir_version: R4
