Configuration through Environment Variables progress 2 , now HAPIFHIR FHIR version overriden by environment variable "FHIR_VERSION", spring profiles and maven profiles simplified

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,6 @@ services:
       timeout: 10s
       retries: 10
       start_period: 5s
-#    volumes:
-#      - ./database/create-postgresql-for-hapi-fhir.sql:/docker-entrypoint-initdb.d/3.sql
-#        - hapi-fhir-postgres:/var/lib/postgresql/data
   iis-sandbox-mysql:
     image: mysql:latest
     container_name: iis-sandbox-mysql
@@ -38,11 +35,11 @@ services:
     build: .
     #    image: clemhen/iis-sandbox:deployable-v1.2
     container_name: iis-sandbox
-    #    environment:
-    #      - iis.mysql.hibernate.connection.url=jdbc:mysql://iis-sandbox-mysql:3306/iis_alongside_jpa
-    #      - IIS_MYSQL_URL=jdbc:mysql://iis-sandbox-mysql:3306/iis_alongside_jpa
-    #      - SPRING_DATASOURCE_URL=jdbc:postgresql://hapi-fhir-postgres:5432/hapi_fhir_iis
-    #      - spring.datasource.url=jdbc:postgresql://hapi-fhir-postgres:5432/hapi_fhir_iis
+    environment:
+      #      - spring.profiles.active=R4
+      FHIR_VERSION: R4
+      IIS_MYSQL_URL: jdbc:mysql://iis-sandbox-mysql:3306/iis_alongside_jpa
+      SPRING_DATASOURCE_URL: jdbc:postgresql://hapi-fhir-postgresql:5432/hapi_fhir_iis
     restart: unless-stopped
     ports:
       - "8081:8080"
