--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -41,13 +41,18 @@ spring:
     baselineOnMigrate: true
   datasource:
     url: '@SPRING_DATASOURCE_URL@'
+    username: hapi_iis_web
+    password: SicMundusCreatusEst
+    driver-class-name: org.postgresql.Driver
     # rest is Handled in spring profiles
     max-active: 50
     # database connection pool size
     hikari:
       maximum-pool-size: 10
+
   jpa:
     properties:
+      hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect
       hibernate.format_sql: false
       hibernate.show_sql: false
       #Hibernate dialect is automatically detected except Postgres and H2.
@@ -75,11 +80,13 @@ spring:
       enabled: false
 hapi:
   fhir:
+    ### This is the FHIR version. Choose between, DSTU2, DSTU3, R4 or R5
+    #    HERE R5 selected by default, can be modified with environment variable hapi.fhir.fhir_version
+    #    fhir_version: '@hapi.fhir.fhir_version@'
+
     ### This enables the swagger-ui at /fhir/swagger-ui/index.html as well as the /fhir/api-docs (see https://hapifhir.io/hapi-fhir/docs/server_plain/openapi.html)
 #    openapi_enabled: true
-    ### This is the FHIR version. Choose between, DSTU2, DSTU3, R4 or R5
-    fhir_version: R5
-    #    fhir_version: R4
+
     ### enable to use the ApacheProxyAddressStrategy which uses X-Forwarded-* headers
     ### to determine the FHIR server address
     #   use_apache_address_strategy: false
@@ -220,15 +227,6 @@ hapi:
 #  username: SomeUsername
 
 ## Prod profile only properties to set up with postgresql
----
-spring:
-  config.activate.on-profile: prod
-  datasource:
-    username: hapi_iis_web
-    password: SicMundusCreatusEst
-    driver-class-name: org.postgresql.Driver
-  jpa.properties.hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirPostgres94Dialect
-#  set in pom.xml TODO see why it sometimes does not work
 
 ## Dev profile only properties to set up with H2
 ---
@@ -239,15 +237,15 @@ spring:
     password: null
     driverClassName: org.h2.Driver
   jpa.properties.hibernate.dialect: ca.uhn.fhir.jpa.model.dialect.HapiFhirH2Dialect
----
-spring:
-  config.activate.on-profile: R5
-hapi:
-  fhir:
-    fhir_version: R5
----
-spring:
-  config.activate.on-profile: R4
-hapi:
-  fhir:
-    fhir_version: R4
+#---
+#spring:
+#  config.activate.on-profile: R5
+#hapi:
+#  fhir:
+#    fhir_version: R5
+#---
+#spring:
+#  config.activate.on-profile: R4
+#hapi:
+#  fhir:
+#    fhir_version: R4
