--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: hapi-fhir-postgres
     restart: unless-stopped
     environment:
+      #      Postgres DB name should be changed when trying to switch between FHIR version
       POSTGRES_DB: "hapi_fhir_iis"
       POSTGRES_USER: "hapi_iis_web"
       POSTGRES_PASSWORD: "SicMundusCreatusEst"
@@ -36,7 +37,6 @@ services:
     #    image: clemhen/iis-sandbox:deployable-v1.2
     container_name: iis-sandbox
     environment:
-      #      - spring.profiles.active=R4
       FHIR_VERSION: R4
       IIS_MYSQL_URL: jdbc:mysql://iis-sandbox-mysql:3306/iis_alongside_jpa
       SPRING_DATASOURCE_URL: jdbc:postgresql://hapi-fhir-postgresql:5432/hapi_fhir_iis
